# tui-pattern-highlighter

./: Cargo.toml  LICENSE  README.md
src/: highlighter.rs  lib.rs
