[package]
name = "tui-pattern-highlighter"
version = "0.3.1"
edition = "2021"
authors = ["0watcher"]
description = """
a dead simple search pattern highlighter for ratatui
"""
license = "MIT"
repository = "https://github.com/0watcher/tui-pattern-highlighter"
readme = "README.md"

[dependencies]
ratatui = "0.27.0"
regex = "1.10.4"
